<resources>
    <string name="app_name">TicTacToe</string>
    <string name="label_humanVsHuman">Human vs Human</string>
    <string name="label_humanVsAi">Human vs AI</string>
    <string name="label_aiVsAi">AI vs AI</string>
    <string name="label_matchHistory">Match History</string>
    <string name="input_names">Input names</string>
    <string name="player_2">Player 2</string>
    <string name="player_1">Player 1</string>
    <string name="submit">Submit</string>
    <string name="input_name">Input name</string>
    <string name="play_as_player_1">Play as player 1</string>
    <string name="play_as_player_2">Play as player 2</string>
</resources>