<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/main_background"
    android:padding="@dimen/padding_small">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Tic Tac Toe"
        android:textSize="@dimen/title_text_size"
        android:textColor="@color/label"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <View
        android:id="@+id/separator_line"
        android:layout_width="match_parent"
        android:layout_height="@dimen/separator_line_height"
        android:background="@color/separator_line"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        app:layout_constraintBottom_toTopOf="@id/b_humanVsHuman"/>

    <Button
        android:id="@+id/b_humanVsHuman"
        android:layout_width="@dimen/width_menu_button"
        android:layout_height="@dimen/height_menu_button"
        app:layout_constraintTop_toBottomOf="@id/separator_line"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="@dimen/margin_small"
        android:text="@string/label_humanVsHuman"
        android:textSize="25sp"
        android:backgroundTint="@color/btn_background"
        android:textColor="@color/btn_foreground"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/b_humanVsAi"
        android:layout_width="@dimen/width_menu_button"
        android:layout_height="@dimen/height_menu_button"
        app:layout_constraintTop_toBottomOf="@id/b_humanVsHuman"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="@dimen/margin_small"
        android:text="@string/label_humanVsAi"
        android:textSize="25sp"
        android:backgroundTint="@color/btn_background"
        android:textColor="@color/btn_foreground"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/b_aiVsAi"
        android:layout_width="@dimen/width_menu_button"
        android:layout_height="@dimen/height_menu_button"
        app:layout_constraintTop_toBottomOf="@id/b_humanVsAi"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="@dimen/margin_small"
        android:text="@string/label_aiVsAi"
        android:textSize="25sp"
        android:backgroundTint="@color/btn_background"
        android:textColor="@color/btn_foreground"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/b_matchHistory"
        android:layout_width="@dimen/width_menu_button"
        android:layout_height="@dimen/height_menu_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="@dimen/margin_small"
        android:text="@string/label_matchHistory"
        android:textSize="25sp"
        android:backgroundTint="@color/btn_background"
        android:textColor="@color/btn_foreground"
        android:textStyle="bold"/>

</androidx.constraintlayout.widget.ConstraintLayout>