<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlayerInputActivity"
    android:padding="@dimen/padding_small"
    android:background="@color/main_background">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_bot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.7" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/separator_line_height"
        app:layout_constraintTop_toTopOf="@id/guide_top"
        android:background="@color/separator_line"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/separator_line_height"
        app:layout_constraintTop_toTopOf="@id/guide_bot"
        android:background="@color/separator_line"/>

    <TextView
        android:id="@+id/tv_labelInputNames"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/guide_top"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/input_names"
        android:textSize="@dimen/label_text_size"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:textColor="@color/label"/>

    <TextView
        android:id="@+id/tv_labelInputPlayer1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/guide_top"
        app:layout_constraintBottom_toTopOf="@id/et_inputPlayer1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/player_1"
        android:textSize="@dimen/label_text_size"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:textColor="@color/label"/>

    <TextView
        android:id="@+id/tv_labelInputPlayer2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/et_inputPlayer1"
        app:layout_constraintBottom_toBottomOf="@id/et_inputPlayer2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/player_2"
        android:textSize="@dimen/label_text_size"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:textColor="@color/label"/>


    <EditText
        android:id="@+id/et_inputPlayer1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_labelInputPlayer1"
        app:layout_constraintBottom_toTopOf="@id/tv_labelInputPlayer2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textSize="@dimen/label_text_size"
        android:background="@color/btn_background"
        android:textColor="@color/btn_foreground"
        android:textAlignment="center"
        android:gravity="center_horizontal" />

    <EditText
        android:id="@+id/et_inputPlayer2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_labelInputPlayer2"
        app:layout_constraintBottom_toTopOf="@id/guide_bot"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textSize="@dimen/label_text_size"
        android:background="@color/btn_background"
        android:textColor="@color/btn_foreground"
        android:textAlignment="center"
        android:gravity="center_horizontal" />

    <Button
        android:id="@+id/b_inputPlayerNames"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/guide_bot"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/submit"
        android:textSize="@dimen/label_text_size"
        android:textStyle="bold"
        android:backgroundTint="@color/btn_background"
        android:textColor="@color/btn_foreground"/>

</androidx.constraintlayout.widget.ConstraintLayout>